<resources>
    <string name="app_name">Alumni Tracker</string>
    <string name="message_txt">Message</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signin_btn">Sign In</string>
    <string name="password_txt">Password</string>
    <string name="email_txt">Email</string>
    <string name="logo_img">Logo</string>
    <string name="forget_txt">Forget Password?</string>
    <string name="new_user_txt">New User?</string>
    <string name="register_link_txt">Register here.</string>
    <string name="fullname_txt">Fullname</string>
    <string name="signup_btn">Sign Up</string>
    <string name="confirm_pwd_txt">Confirm Password</string>
    <string name="existingUserTxt">Already have an account?</string>
    <string name="signin_link_txt">Sign in now!</string>
</resources>
